--- a/cime.ipynb
+++ b/cime.ipynb
@@ -11,16 +11,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to interrupt the Kernel. \n",
+      "\u001b[1;31mUnable to start Kernel '.venv (Python 3.11.9)' due to a timeout waiting for the ports to get used. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "df=pd.read_csv('D:\\\\Guvi\\\\Crime\\\\Crimes_-_2001_to_Present.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,41 +580,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import streamlit as st\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
-    "st.title('Chicago Crime Analysis Dashboard')\n",
+    "# Sample data generation\n",
     "\n",
-    "# Display data\n",
-    "st.subheader('Crime Data')\n",
-    "st.write(df.head())\n",
+    "# Crime data\n",
+    "np.random.seed(42)\n",
+    "num_records = 1000\n",
+    "df = pd.DataFrame({\n",
+    "    'Latitude': np.random.uniform(41.6, 42.0, num_records),\n",
+    "    'Longitude': np.random.uniform(-87.9, -87.5, num_records),\n",
+    "    'Crime Type': np.random.choice(['Theft', 'Assault', 'Burglary', 'Robbery', 'Vandalism'], num_records),\n",
+    "    'Arrest': np.random.choice([True, False], num_records),\n",
+    "    'Domestic': np.random.choice([True, False], num_records),\n",
+    "    'Date': pd.date_range(start='1/1/2020', periods=num_records, freq='H')\n",
+    "})\n",
     "\n",
-    "# Annual Crime Trends\n",
-    "st.subheader('Annual Crime Trends')\n",
-    "st.line_chart(annual_trends)\n",
+    "# Annual trends\n",
+    "annual_trends = df['Date'].dt.year.value_counts().sort_index().reset_index()\n",
+    "annual_trends.columns = ['Year', 'Incidents']\n",
     "\n",
-    "# Monthly Crime Trends\n",
-    "st.subheader('Monthly Crime Trends')\n",
-    "st.line_chart(monthly_trends)\n",
+    "# Monthly trends\n",
+    "monthly_trends = df['Date'].dt.to_period('M').value_counts().sort_index().reset_index()\n",
+    "monthly_trends.columns = ['Month', 'Incidents']\n",
     "\n",
-    "# Peak Crime Hours\n",
-    "st.subheader('Crimes by Hour of the Day')\n",
-    "st.bar_chart(peak_hours)\n",
+    "# Peak hours\n",
+    "peak_hours = df['Date'].dt.hour.value_counts().sort_index().reset_index()\n",
+    "peak_hours.columns = ['Hour', 'Incidents']\n",
     "\n",
-    "# Crime Types Distribution\n",
-    "st.subheader('Distribution of Crime Types')\n",
-    "st.bar_chart(crime_types)\n",
+    "# Crime types distribution\n",
+    "crime_types = df['Crime Type'].value_counts().reset_index()\n",
+    "crime_types.columns = ['Crime Type', 'Incidents']\n",
     "\n",
-    "# Arrest Rates by Crime Type\n",
-    "st.subheader('Arrest Rates by Crime Type')\n",
-    "st.bar_chart(arrest_rates)\n",
+    "# Arrest rates by crime type\n",
+    "arrest_rates = df.groupby('Crime Type')['Arrest'].mean().reset_index()\n",
+    "arrest_rates.columns = ['Crime Type', 'Arrest Rate']\n",
     "\n",
-    "# Domestic vs Non-Domestic Crimes\n",
-    "st.subheader('Domestic vs Non-Domestic Crimes')\n",
-    "st.bar_chart(domestic_vs_non_domestic)\n",
+    "# Domestic vs Non-Domestic\n",
+    "domestic_vs_non_domestic = df['Domestic'].value_counts().reset_index()\n",
+    "domestic_vs_non_domestic.columns = ['Domestic', 'Incidents']\n",
+    "domestic_vs_non_domestic['Domestic'] = domestic_vs_non_domestic['Domestic'].map({True: 'Domestic', False: 'Non-Domestic'})\n",
     "\n",
-    "# Display Heatmap\n",
-    "st.subheader('Crime Hotspots Heatmap')\n",
-    "st.map(df[['Latitude\n"
+    "# Save data to CSV files\n",
+    "df.to_csv('chicago_crime_data.csv', index=False)\n",
+    "annual_trends.to_csv('annual_trends.csv', index=False)\n",
+    "monthly_trends.to_csv('monthly_trends.csv', index=False)\n",
+    "peak_hours.to_csv('peak_hours.csv', index=False)\n",
+    "crime_types.to_csv('crime_types.csv', index=False)\n",
+    "arrest_rates.to_csv('arrest_rates.csv', index=False)\n",
+    "domestic_vs_non_domestic.to_csv('domestic_vs_non_domestic.csv', index=False)\n"
    ]
   }
  ],
