--- a/cime.ipynb
+++ b/cime.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,25 +13,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to interrupt the Kernel. \n",
-      "\u001b[1;31mUnable to start Kernel '.venv (Python 3.11.9)' due to a timeout waiting for the ports to get used. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df=pd.read_csv('D:\\\\Guvi\\\\Crime\\\\Crimes_-_2001_to_Present.csv')"
+    "df=pd.read_csv('C:\\\\Users\\\\Saravanan\\\\OneDrive\\\\Desktop\\\\Crime\\\\Crimes_-_2001_to_Present.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +419,7 @@
        "[8077151 rows x 22 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,6 +441,76 @@
     "df['Day'] = df['Date'].dt.day\n",
     "df['Hour'] = df['Date'].dt.hour\n",
     "df.dropna(subset=['Latitude', 'Longitude'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 7988193 entries, 1 to 8077150\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column                Dtype         \n",
+      "---  ------                -----         \n",
+      " 0   ID                    int64         \n",
+      " 1   Case Number           object        \n",
+      " 2   Date                  datetime64[ns]\n",
+      " 3   Block                 object        \n",
+      " 4   IUCR                  object        \n",
+      " 5   Primary Type          object        \n",
+      " 6   Description           object        \n",
+      " 7   Location Description  object        \n",
+      " 8   Arrest                bool          \n",
+      " 9   Domestic              bool          \n",
+      " 10  Beat                  int64         \n",
+      " 11  District              float64       \n",
+      " 12  Ward                  float64       \n",
+      " 13  Community Area        float64       \n",
+      " 14  FBI Code              object        \n",
+      " 15  X Coordinate          float64       \n",
+      " 16  Y Coordinate          float64       \n",
+      " 17  Year                  int32         \n",
+      " 18  Updated On            object        \n",
+      " 19  Latitude              float64       \n",
+      " 20  Longitude             float64       \n",
+      " 21  Location              object        \n",
+      " 22  Month                 int32         \n",
+      " 23  Day                   int32         \n",
+      " 24  Hour                  int32         \n",
+      "dtypes: bool(2), datetime64[ns](1), float64(7), int32(4), int64(2), object(9)\n",
+      "memory usage: 1.3+ GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'summary'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_20280\\2518340673.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\Users\\Saravanan\\OneDrive\\Desktop\\Crime\\.venv\\Lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   6295\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6296\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6297\u001b[0m         ):\n\u001b[0;32m   6298\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 6299\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'summary'"
+     ]
+    }
+   ],
+   "source": [
+    "df.summary()"
    ]
   },
   {
@@ -576,9 +635,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Saravanan\\AppData\\Local\\Temp\\ipykernel_20280\\1871725641.py:15: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+      "  'Date': pd.date_range(start='1/1/2020', periods=num_records, freq='H')\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
